// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/transfer/demo/advanced.md correctly 1`] = `
<div
  class="ant-transfer"
>
  <div
    class="ant-transfer-list ant-transfer-list-with-footer"
    style="width:250px;height:300px"
  >
    <div
      class="ant-transfer-list-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="ant-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="ant-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="ant-transfer-list-body ant-transfer-list-body-with-search"
    >
      <div
        class="ant-transfer-list-body-search-wrapper"
      >
        <div>
          <input
            class="ant-input ant-transfer-list-search"
            placeholder="Search here"
            type="text"
            value=""
          />
          <span
            class="ant-transfer-list-search-action"
          >
            <i
              aria-label="icon: search"
              class="anticon anticon-search"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </i>
          </span>
        </div>
      </div>
      <div
        class="ant-transfer-list-body-not-found"
      >
        <div
          class="ant-empty ant-empty-normal ant-empty-small"
        >
          <div
            class="ant-empty-image"
          >
            <img
              alt="No Data"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
            />
          </div>
          <p
            class="ant-empty-description"
          >
            No Data
          </p>
        </div>
      </div>
    </div>
    <div
      class="ant-transfer-list-footer"
    >
      <button
        class="ant-btn ant-btn-sm"
        style="float:right;margin:5px"
        type="button"
      >
        <span>
          reload
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-transfer-operation"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-sm"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      <span>
        to right
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
      <span>
        to left
      </span>
    </button>
  </div>
  <div
    class="ant-transfer-list ant-transfer-list-with-footer"
    style="width:250px;height:300px"
  >
    <div
      class="ant-transfer-list-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="ant-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="ant-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="ant-transfer-list-body ant-transfer-list-body-with-search"
    >
      <div
        class="ant-transfer-list-body-search-wrapper"
      >
        <div>
          <input
            class="ant-input ant-transfer-list-search"
            placeholder="Search here"
            type="text"
            value=""
          />
          <span
            class="ant-transfer-list-search-action"
          >
            <i
              aria-label="icon: search"
              class="anticon anticon-search"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </i>
          </span>
        </div>
      </div>
      <div
        class="ant-transfer-list-body-not-found"
      >
        <div
          class="ant-empty ant-empty-normal ant-empty-small"
        >
          <div
            class="ant-empty-image"
          >
            <img
              alt="No Data"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
            />
          </div>
          <p
            class="ant-empty-description"
          >
            No Data
          </p>
        </div>
      </div>
    </div>
    <div
      class="ant-transfer-list-footer"
    >
      <button
        class="ant-btn ant-btn-sm"
        style="float:right;margin:5px"
        type="button"
      >
        <span>
          reload
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders ./components/transfer/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-transfer"
  >
    <div
      class="ant-transfer-list"
    >
      <div
        class="ant-transfer-list-header"
      >
        <label
          class="ant-checkbox-wrapper"
        >
          <span
            class="ant-checkbox"
          >
            <input
              class="ant-checkbox-input"
              type="checkbox"
            />
            <span
              class="ant-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="ant-transfer-list-header-selected"
        >
          <span>
            14 items
          </span>
          <span
            class="ant-transfer-list-header-title"
          >
            Source
          </span>
        </span>
      </div>
      <div
        class="ant-transfer-list-body"
      >
        <ul
          class="ant-transfer-list-content"
        >
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-transfer-operation"
    >
      <button
        class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
      </button>
      <button
        class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          aria-label="icon: left"
          class="anticon anticon-left"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </i>
      </button>
    </div>
    <div
      class="ant-transfer-list"
    >
      <div
        class="ant-transfer-list-header"
      >
        <label
          class="ant-checkbox-wrapper"
        >
          <span
            class="ant-checkbox"
          >
            <input
              class="ant-checkbox-input"
              type="checkbox"
            />
            <span
              class="ant-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="ant-transfer-list-header-selected"
        >
          <span>
            6 items
          </span>
          <span
            class="ant-transfer-list-header-title"
          >
            Target
          </span>
        </span>
      </div>
      <div
        class="ant-transfer-list-body"
      >
        <ul
          class="ant-transfer-list-content"
        >
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
          <div
            class="LazyLoad"
            style="height:32px"
          />
        </ul>
      </div>
    </div>
  </div>
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    style="margin-top:16px"
    type="button"
  >
    <span
      class="ant-switch-inner"
    >
      disabled
    </span>
  </button>
</div>
`;

exports[`renders ./components/transfer/demo/custom-item.md correctly 1`] = `
<div
  class="ant-transfer"
>
  <div
    class="ant-transfer-list"
    style="width:300px;height:300px"
  >
    <div
      class="ant-transfer-list-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="ant-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="ant-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="ant-transfer-list-body"
    >
      <div
        class="ant-transfer-list-body-not-found"
      >
        <div
          class="ant-empty ant-empty-normal ant-empty-small"
        >
          <div
            class="ant-empty-image"
          >
            <img
              alt="No Data"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
            />
          </div>
          <p
            class="ant-empty-description"
          >
            No Data
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-transfer-operation"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="ant-transfer-list"
    style="width:300px;height:300px"
  >
    <div
      class="ant-transfer-list-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="ant-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="ant-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="ant-transfer-list-body"
    >
      <div
        class="ant-transfer-list-body-not-found"
      >
        <div
          class="ant-empty ant-empty-normal ant-empty-small"
        >
          <div
            class="ant-empty-image"
          >
            <img
              alt="No Data"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
            />
          </div>
          <p
            class="ant-empty-description"
          >
            No Data
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/transfer/demo/large-data.md correctly 1`] = `
<div
  class="ant-transfer"
>
  <div
    class="ant-transfer-list"
  >
    <div
      class="ant-transfer-list-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="ant-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="ant-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="ant-transfer-list-body"
    >
      <div
        class="ant-transfer-list-body-not-found"
      >
        <div
          class="ant-empty ant-empty-normal ant-empty-small"
        >
          <div
            class="ant-empty-image"
          >
            <img
              alt="No Data"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
            />
          </div>
          <p
            class="ant-empty-description"
          >
            No Data
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-transfer-operation"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="ant-transfer-list"
  >
    <div
      class="ant-transfer-list-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="ant-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="ant-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="ant-transfer-list-body"
    >
      <div
        class="ant-transfer-list-body-not-found"
      >
        <div
          class="ant-empty ant-empty-normal ant-empty-small"
        >
          <div
            class="ant-empty-image"
          >
            <img
              alt="No Data"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
            />
          </div>
          <p
            class="ant-empty-description"
          >
            No Data
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/transfer/demo/search.md correctly 1`] = `
<div
  class="ant-transfer"
>
  <div
    class="ant-transfer-list"
  >
    <div
      class="ant-transfer-list-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="ant-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="ant-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="ant-transfer-list-body ant-transfer-list-body-with-search"
    >
      <div
        class="ant-transfer-list-body-search-wrapper"
      >
        <div>
          <input
            class="ant-input ant-transfer-list-search"
            placeholder="Search here"
            type="text"
            value=""
          />
          <span
            class="ant-transfer-list-search-action"
          >
            <i
              aria-label="icon: search"
              class="anticon anticon-search"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </i>
          </span>
        </div>
      </div>
      <div
        class="ant-transfer-list-body-not-found"
      >
        <div
          class="ant-empty ant-empty-normal ant-empty-small"
        >
          <div
            class="ant-empty-image"
          >
            <img
              alt="No Data"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
            />
          </div>
          <p
            class="ant-empty-description"
          >
            No Data
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-transfer-operation"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="ant-transfer-list"
  >
    <div
      class="ant-transfer-list-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="ant-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="ant-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="ant-transfer-list-body ant-transfer-list-body-with-search"
    >
      <div
        class="ant-transfer-list-body-search-wrapper"
      >
        <div>
          <input
            class="ant-input ant-transfer-list-search"
            placeholder="Search here"
            type="text"
            value=""
          />
          <span
            class="ant-transfer-list-search-action"
          >
            <i
              aria-label="icon: search"
              class="anticon anticon-search"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </i>
          </span>
        </div>
      </div>
      <div
        class="ant-transfer-list-body-not-found"
      >
        <div
          class="ant-empty ant-empty-normal ant-empty-small"
        >
          <div
            class="ant-empty-image"
          >
            <img
              alt="No Data"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
            />
          </div>
          <p
            class="ant-empty-description"
          >
            No Data
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/transfer/demo/table-transfer.md correctly 1`] = `
<div>
  <div
    class="ant-transfer ant-transfer-customize-list"
  >
    <div
      class="ant-transfer-list"
    >
      <div
        class="ant-transfer-list-header"
      >
        <span
          class="ant-transfer-list-header-selected"
        >
          <span>
            14 items
          </span>
          <span
            class="ant-transfer-list-header-title"
          />
        </span>
      </div>
      <div
        class="ant-transfer-list-body"
      >
        <div
          class="ant-transfer-list-body-customize-wrapper"
        >
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-small ant-table-scroll-position-left"
                >
                  <div
                    class="ant-table-content"
                  >
                    <div
                      class="ant-table-body"
                    >
                      <table
                        class=""
                      >
                        <colgroup>
                          <col
                            class="ant-table-selection-col"
                          />
                          <col />
                          <col />
                          <col />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-selection-column"
                            >
                              <span
                                class="ant-table-header-column"
                              >
                                <div>
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    <div
                                      class="ant-table-selection"
                                    >
                                      <label
                                        class="ant-checkbox-wrapper"
                                      >
                                        <span
                                          class="ant-checkbox"
                                        >
                                          <input
                                            class="ant-checkbox-input"
                                            type="checkbox"
                                          />
                                          <span
                                            class="ant-checkbox-inner"
                                          />
                                        </span>
                                      </label>
                                    </div>
                                  </span>
                                  <span
                                    class="ant-table-column-sorter"
                                  />
                                </div>
                              </span>
                            </th>
                            <th
                              class=""
                            >
                              <span
                                class="ant-table-header-column"
                              >
                                <div>
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Name
                                  </span>
                                  <span
                                    class="ant-table-column-sorter"
                                  />
                                </div>
                              </span>
                            </th>
                            <th
                              class=""
                            >
                              <span
                                class="ant-table-header-column"
                              >
                                <div>
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Tag
                                  </span>
                                  <span
                                    class="ant-table-column-sorter"
                                  />
                                </div>
                              </span>
                            </th>
                            <th
                              class=""
                            >
                              <span
                                class="ant-table-header-column"
                              >
                                <div>
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Description
                                  </span>
                                  <span
                                    class="ant-table-column-sorter"
                                  />
                                </div>
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="0"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
                                >
                                  <span
                                    class="ant-checkbox ant-checkbox-disabled"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      disabled=""
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content1
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                cat
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content1
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content2
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                dog
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content2
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content4
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                cat
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content4
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="4"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
                                >
                                  <span
                                    class="ant-checkbox ant-checkbox-disabled"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      disabled=""
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content5
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                dog
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content5
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="6"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content7
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                cat
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content7
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="7"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content8
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                dog
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content8
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="9"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content10
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                cat
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content10
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="10"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content11
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                dog
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content11
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="12"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
                                >
                                  <span
                                    class="ant-checkbox ant-checkbox-disabled"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      disabled=""
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content13
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                cat
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content13
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="13"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content14
                            </td>
                            <td
                              class=""
                            >
                              <div
                                class="ant-tag"
                              >
                                dog
                              </div>
                            </td>
                            <td
                              class=""
                            >
                              description of content14
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-table-pagination mini"
                  unselectable="unselectable"
                >
                  <li
                    aria-disabled="true"
                    class="ant-pagination-disabled ant-pagination-prev"
                    title="Previous Page"
                  >
                    <a
                      class="ant-pagination-item-link"
                    >
                      <i
                        aria-label="icon: left"
                        class="anticon anticon-left"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </i>
                    </a>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a>
                      1
                    </a>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-2"
                    tabindex="0"
                    title="2"
                  >
                    <a>
                      2
                    </a>
                  </li>
                  <li
                    aria-disabled="false"
                    class=" ant-pagination-next"
                    tabindex="0"
                    title="Next Page"
                  >
                    <a
                      class="ant-pagination-item-link"
                    >
                      <i
                        aria-label="icon: right"
                        class="anticon anticon-right"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                          />
                        </svg>
                      </i>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-transfer-operation"
    >
      <button
        class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
      </button>
      <button
        class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          aria-label="icon: left"
          class="anticon anticon-left"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </i>
      </button>
    </div>
    <div
      class="ant-transfer-list"
    >
      <div
        class="ant-transfer-list-header"
      >
        <span
          class="ant-transfer-list-header-selected"
        >
          <span>
            6 items
          </span>
          <span
            class="ant-transfer-list-header-title"
          />
        </span>
      </div>
      <div
        class="ant-transfer-list-body"
      >
        <div
          class="ant-transfer-list-body-customize-wrapper"
        >
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-small ant-table-scroll-position-left"
                >
                  <div
                    class="ant-table-content"
                  >
                    <div
                      class="ant-table-body"
                    >
                      <table
                        class=""
                      >
                        <colgroup>
                          <col
                            class="ant-table-selection-col"
                          />
                          <col />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-selection-column"
                            >
                              <span
                                class="ant-table-header-column"
                              >
                                <div>
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    <div
                                      class="ant-table-selection"
                                    >
                                      <label
                                        class="ant-checkbox-wrapper"
                                      >
                                        <span
                                          class="ant-checkbox"
                                        >
                                          <input
                                            class="ant-checkbox-input"
                                            type="checkbox"
                                          />
                                          <span
                                            class="ant-checkbox-inner"
                                          />
                                        </span>
                                      </label>
                                    </div>
                                  </span>
                                  <span
                                    class="ant-table-column-sorter"
                                  />
                                </div>
                              </span>
                            </th>
                            <th
                              class=""
                            >
                              <span
                                class="ant-table-header-column"
                              >
                                <div>
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Name
                                  </span>
                                  <span
                                    class="ant-table-column-sorter"
                                  />
                                </div>
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content3
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="5"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content6
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="8"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
                                >
                                  <span
                                    class="ant-checkbox ant-checkbox-disabled"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      disabled=""
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content9
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="11"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content12
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="14"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content15
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="17"
                          >
                            <td
                              class="ant-table-selection-column"
                            >
                              <span>
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </span>
                            </td>
                            <td
                              class=""
                            >
                              <span
                                class="ant-table-row-indent indent-level-0"
                                style="padding-left:0px"
                              />
                              content18
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-table-pagination mini"
                  unselectable="unselectable"
                >
                  <li
                    aria-disabled="true"
                    class="ant-pagination-disabled ant-pagination-prev"
                    title="Previous Page"
                  >
                    <a
                      class="ant-pagination-item-link"
                    >
                      <i
                        aria-label="icon: left"
                        class="anticon anticon-left"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </i>
                    </a>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a>
                      1
                    </a>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-disabled ant-pagination-next"
                    title="Next Page"
                  >
                    <a
                      class="ant-pagination-item-link"
                    >
                      <i
                        aria-label="icon: right"
                        class="anticon anticon-right"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                          />
                        </svg>
                      </i>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    style="margin-top:16px"
    type="button"
  >
    <span
      class="ant-switch-inner"
    >
      disabled
    </span>
  </button>
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    style="margin-top:16px"
    type="button"
  >
    <span
      class="ant-switch-inner"
    >
      showSearch
    </span>
  </button>
</div>
`;

exports[`renders ./components/transfer/demo/tree-transfer.md correctly 1`] = `
<div>
  <div
    class="tree-transfer ant-transfer ant-transfer-customize-list"
  >
    <div
      class="ant-transfer-list"
    >
      <div
        class="ant-transfer-list-header"
      >
        <span
          class="ant-transfer-list-header-selected"
        >
          <span>
            5 items
          </span>
          <span
            class="ant-transfer-list-header-title"
          />
        </span>
      </div>
      <div
        class="ant-transfer-list-body"
      >
        <div
          class="ant-transfer-list-body-customize-wrapper"
        >
          <ul
            class="ant-tree ant-tree-icon-hide ant-tree-block-node"
            role="tree"
            unselectable="on"
          >
            <li
              class="ant-tree-treenode-switcher-open"
              role="treeitem"
            >
              <span
                class="ant-tree-switcher ant-tree-switcher-noop"
              />
              <span
                class="ant-tree-checkbox"
              >
                <span
                  class="ant-tree-checkbox-inner"
                />
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                title="0-0"
              >
                <span
                  class="ant-tree-title"
                >
                  0-0
                </span>
              </span>
            </li>
            <li
              class="ant-tree-treenode-switcher-open"
              role="treeitem"
            >
              <span
                class="ant-tree-switcher ant-tree-switcher_open"
              >
                <i
                  aria-label="icon: caret-down"
                  class="anticon anticon-caret-down ant-tree-switcher-icon"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="caret-down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                    />
                  </svg>
                </i>
              </span>
              <span
                class="ant-tree-checkbox"
              >
                <span
                  class="ant-tree-checkbox-inner"
                />
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                title="0-1"
              >
                <span
                  class="ant-tree-title"
                >
                  0-1
                </span>
              </span>
              <ul
                class="ant-tree-child-tree ant-tree-child-tree-open"
                data-expanded="true"
                role="group"
              >
                <li
                  class="ant-tree-treenode-switcher-open"
                  role="treeitem"
                >
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title="0-1-0"
                  >
                    <span
                      class="ant-tree-title"
                    >
                      0-1-0
                    </span>
                  </span>
                </li>
                <li
                  class="ant-tree-treenode-switcher-open"
                  role="treeitem"
                >
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title="0-1-1"
                  >
                    <span
                      class="ant-tree-title"
                    >
                      0-1-1
                    </span>
                  </span>
                </li>
              </ul>
            </li>
            <li
              class="ant-tree-treenode-switcher-open"
              role="treeitem"
            >
              <span
                class="ant-tree-switcher ant-tree-switcher-noop"
              />
              <span
                class="ant-tree-checkbox"
              >
                <span
                  class="ant-tree-checkbox-inner"
                />
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                title="0-3"
              >
                <span
                  class="ant-tree-title"
                >
                  0-3
                </span>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ant-transfer-operation"
    >
      <button
        class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
      </button>
      <button
        class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          aria-label="icon: left"
          class="anticon anticon-left"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </i>
      </button>
    </div>
    <div
      class="ant-transfer-list"
    >
      <div
        class="ant-transfer-list-header"
      >
        <span
          class="ant-transfer-list-header-selected"
        >
          <span>
            0 item
          </span>
          <span
            class="ant-transfer-list-header-title"
          />
        </span>
      </div>
      <div
        class="ant-transfer-list-body"
      >
        <div
          class="ant-transfer-list-body-not-found"
        >
          <div
            class="ant-empty ant-empty-normal ant-empty-small"
          >
            <div
              class="ant-empty-image"
            >
              <img
                alt="No Data"
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
              />
            </div>
            <p
              class="ant-empty-description"
            >
              No Data
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
